Fixed some messy layout (error.html) on small screens

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -539,6 +539,13 @@ select {
 .mail-content:last-of-type {
   border-bottom: none;
 }
+.mail-adress {
+  white-space: nowrap;
+  text-overflow: clip;
+}
+.mail-adress-parent {
+  overflow: hidden;
+}
 .huge-headline {
   font-size: 6rem;
 }
